Fix InputDeviceInfo.getCapabilities() for video devices.

This CL fixes a bug where the hashed device ID instead of the real
device ID is used to get video input formats for
InputDeviceInfo.getCapabilities().
This bug caused the capabilities to be computed with the fallback list
of video formats instead of the real list.

Bug: 863426

logging

Change-Id: I46b3eb6c22fe43548206d81efaf7a15b99c54456
Reviewed-on: https://chromium-review.googlesource.com/1138154
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Reviewed-by: Henrik Boström <hbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575740}
Former-commit-id: 4273437267c208d21f3a5dba963673501cc72c95